<resources>
    <string name="app_name">Selfstudy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">HOME</string>
    <string name="title_test">TESTS</string>
    <string name="title_analysis">ANALYSIS</string>
    <string name="title_doubt">DOUBT</string>
    <string name="title_profile">PROFILE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upgrade">Your free trial expired on 29 Jan 2019 please upgrade now to get full access.</string>
    <string name="upgrade_button">UPGRADE NOW</string>
    <string name="wallet">Wallet</string>
    <string name="trophy">Trophy</string>
</resources>
