<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_test"
        android:icon="@drawable/ic_test_black_24dp"
        android:title="@string/title_test" />

    <item
        android:id="@+id/navigation_analysis"
        android:icon="@drawable/ic_analysis_black_24dp"
        android:title="@string/title_analysis" />

    <item
        android:id="@+id/navigation_doubt"
        android:icon="@drawable/ic_doubt_black_24dp"
        android:title="@string/title_doubt" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile" />

</menu>