<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f1f5f7"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/banner_image"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:src="@drawable/sample"
            android:contentDescription="@string/app_name"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                android:id="@+id/upgrade_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/app_logo_about_us"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/gift" />

                <TextView
                    android:id="@+id/text_upgrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/upgrade"
                    android:textSize="14sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:text="@string/upgrade_button"
                android:textColor="@android:color/white"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Subjects"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textAlignment="gravity"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:textStyle="bold"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"/>

    </LinearLayout>

    </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
